syntax = "proto3";

option csharp_namespace = "GrpcClientAPI";


service interaccion{
      rpc seguirUsuario(IdSeguirUsuario) returns(StringSeguido){}
      rpc dejarDeSeguirUsuario(IdSeguirUsuario) returns (StringSeguido){}
      rpc agregarFavorito(favorito) returns (StringSeguido){}
      rpc removerFavorito(favorito) returns (StringSeguido){}
}

message favorito{
   int64 idUsuario=1;
   int64 idReceta=2;
}

message IdSeguirUsuario{
    int64 idSeguidor=1;
    int64 idSeguir=2;
}

message StringSeguido{
    string seguido=1;
}